--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://Rennie44:$HF_TOKEN@huggingface.co/spaces/Rennie44/Sorting-Algorithm-Visualization main
+        run: git push https://Rennie44:$HF_TOKEN@huggingface.co/spaces/Rennie44/Sorting-Algorithm-Visualization master:main
