--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,25 @@
 name: Sync to Hugging Face hub
+
 on:
   push:
     branches: [main]
-  # to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout main branch
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           lfs: true
+          ref: main    # 👈 THIS IS THE FIX
+
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://Rennie44:$HF_TOKEN@huggingface.co/spaces/Rennie44/Sorting-Algorithm-Visualization main:main
-
+        run: |
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git push https://Rennie44:$HF_TOKEN@huggingface.co/spaces/Rennie44/Sorting-Algorithm-Visualization main:main
