--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Sync to Hugging Face hub
-
 on:
   push:
     branches: [main]
@@ -9,17 +8,19 @@ jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout main
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           lfs: true
+          ref: main
 
-      - name: Set up git identity
+      - name: Set git identity
         run: |
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
 
-      - name: Push to Hugging Face
+      - name: Push to Hugging Face (using __token__)
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
