--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Sync to Hugging Face hub
-
 on:
   push:
     branches: [main]
@@ -8,7 +7,6 @@ on:
 jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout main
         uses: actions/checkout@v3
@@ -17,11 +15,14 @@ jobs:
           lfs: true
           ref: main
 
-      - name: Configure git
+      - name: Set git identity
         run: |
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
 
-      - name: Push to HuggingFace
+      - name: Push to Hugging Face (using __token__)
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git push https://Rennie44:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Rennie44/Sorting-Algorithm-Visualization main:main
+          git remote add hf https://__token__:${HF_TOKEN}@huggingface.co/spaces/Rennie44/Sorting-Algorithm-Visualization
+          git push hf main --force
